<resources>
    <string name="app_name">Tienda De Videojuegos</string>
    <string name="txtRegistro">Registro</string>
    <string name="txtLogin">Login</string>
    <string name="btnLogin">Iniciar Sesión</string>
    <string name="txtRecuerdame">Recuérdame</string>
    <string name="btnProductos">Productos</string>
    <string name="btnPedidos">Pedidos</string>
    <string name="btnClientes">Clientes</string>
    <string name="btnVendedores">Vendedores</string>
    <string name="btnPago">Pago</string>
    <string name="btnNavegacion">Navegación</string>
    <string name="opCerrarSesion">Cerrar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>